services/guardrails/callouts/envoy_local.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  # host_rewrite_literal: www.envoyproxy.io
                  cluster: backend_service
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              message_timeout: 10s  # Default timeout for each message
              max_message_timeout: 60s # Max allowed override timeout
              allow_mode_override: true # Allow the external processor to change modes per request
              grpc_service:
                timeout: 30s # Overall gRPC connection timeout
                envoy_grpc:
                  cluster_name: ext_proc_service
              processing_mode:
                request_header_mode: SEND
                request_body_mode: STREAMED
                request_trailer_mode: SEND
                response_header_mode: SEND
                response_body_mode: FULL_DUPLEX_STREAMED
                response_trailer_mode: SEND
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: backend_service
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    # dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: mock-llm
                port_value: 8000
  - name: ext_proc_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ext_proc_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ext_proc_server
                port_value: 8181
